--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="div-2">
                   <img class="img" src="img/navbar-email-1-2.svg" />
                   <div class="text-wrapper">
-                    Email: Plantingservice@7oroof.com
+                    Email: Plgtingservice@7oroof.com
                   </div>
                 </div>
                 <div class="div-2">
