--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </div>
               <div class="div-3">
                 <div class="text-wrapper">English</div>
-                <img class="img-2" src="img/navbar-down-arrow-2.svg" />
+                <img class="img-1" src="img/navbar-down-arrow-2.svg" />
               </div>
             </div>
           </div>
@@ -1281,7 +1281,7 @@
                 </div>
                 <div class="copy-right">
                   <p class="text-wrapper-35">
-                    © Copyright Industrio 2021-22. All right reserved.
+                    © Copyright IGS 2024. All right reserved.
                   </p>
                   <div class="div">
                     <div class="text-wrapper-36">Privacy Policy</div>
