--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
               </div>
               <div class="div-3">
-                <div class="text-wrapper">English</div>
+                <div class="text-wrapper-language">English</div>
                 <img class="img-1" src="img/navbar-down-arrow-2.svg" />
               </div>
             </div>
